crates/eth-valkyoth-derive/tests/ui/rlp_generic.rs
use eth_valkyoth_derive::RlpDecode;

#[derive(RlpDecode)]
struct Invalid<T> {
    value: T,
}

fn main() {}
